--- a/index.html
+++ b/index.html
@@ -45,36 +45,23 @@ li{
             text-align: center;
         }
 
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
+        
 
-        nav ul li {
-            display: inline;
-            margin-right: 10px;
-        }
+        
+.contact-info {
+            margin: 5px;
+            position: relative;
+            font-weight: bold;
+        }
+        .contact-info p {
+            color: white;
+            text-decoration: none;
+        }
+        .contact-info p a {
+            color: white;
+            text-decoration: none;
+        }
 
-        nav ul li a {
-            color: var(--text-color);
-            text-decoration: none;
-        }
-	            footer ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        footer ul li {
-            display: inline;
-            margin-right: 10px;
-        }
-
-        footer ul li a {
-            color: var(--text-color);
-            text-decoration: none;
-        }
 
         /* Styles for main content */
         .content {
@@ -473,15 +460,16 @@ I’m glad you made it.
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
 </p>
 
-<ul style="margin: 5px; position: relative; font-weight: bold; text-decoration: none;">
-    <li style="color: white; text-decoration: none;"><a href="tel:+17073423998">+17073423998</a></li>
-    <li style="color: white; text-decoration: none;"><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></li>
-    <li style="color: white; text-decoration: none;"><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></li>
-    <li style="color: white; text-decoration: none;"><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></li>
-    <li style="color: white; text-decoration: none;"><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></li>
-    <li style="color: white; text-decoration: none;"><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></li>
-    <li style="color: white; text-decoration: none;"><a href="https://johnbernad6server-b837q.ondigitalocean.app/Menu">Check out this project I'm currently working on.</a></li>
-</ul>
+
+<div class="contact-info">
+        <p><a href="tel:+17073423998">+17073423998</a></p>
+        <p><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></p>
+        <p><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></p>
+        <p><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></p>
+        <p><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></p>
+        <p><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></p>
+        <p><a href="https://johnbernad6server-b837q.ondigitalocean.app/Menu">Check out this project I'm currently working on.</a></p>
+</div>
 
 </div>
   
