--- a/index.html
+++ b/index.html
@@ -45,23 +45,38 @@ li{
             text-align: center;
         }
 
-        
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
 
-        
-.contact-info {
-            margin: 5px;
-            position: relative;
-            font-weight: bold;
-        }
-        .contact-info p {
-            color: white;
-            text-decoration: none;
-        }
-        .contact-info p a {
-            color: white;
-            text-decoration: none;
-        }
+        nav ul li {
+            display: inline;
+            margin-right: 10px;
+        }
 
+        nav ul li a {
+            color: var(--text-color);
+            text-decoration: none;
+        }
+	            footer ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        footer ul li {
+            display: inline;
+            margin-right: 10px;
+        }
+
+        footer ul li a {
+            color: var(--text-color);
+            text-decoration: none;
+        }
+
+        .contact-info { margin: 5px; position: relative; font-weight: bold; } .contact-info p { color: white; text-decoration: none; } .contact-info p a { color: white; text-decoration: none; }
 
         /* Styles for main content */
         .content {
