--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ li{
 /* wave card */
 .e-card {
   margin: 0 auto;
-  background-color: #1d1135;
+  background-color: #110a1f;
   
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
