--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ li{
 /* space button*/
 
 .btn {
-  opacity: 0.5;
+  opacity: 0.75;
   margin: 0 auto;
   margin-top: 40vh;
   display: flex;
@@ -438,7 +438,9 @@ strong {
 </div>
  -->
 <div class="e-card playing">
-
+  <div id="container-stars">
+    <div id="stars"></div>
+  </div>
   <!-- <header>
         
     </header>
@@ -457,7 +459,7 @@ strong {
   <div class="wave"></div> -->
 
 
-<div>
+<div style="opacity: 0.9;">
 <div class="btn" type="button">
   <strong>JOHN BERNAD</strong>
 	
