--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@ strong {
   <div class="wave"></div> -->
 
 
-<div style="opacity: 0.9;">
+<div>
 <div class="btn" type="button">
   <strong>JOHN BERNAD</strong>
 	
@@ -472,14 +472,14 @@ strong {
     <div class="circle"></div>
   </div>
 </div>
-	<p style="margin: 20px; color: white; position: relative; ">Hey there! 👋
+	<p style="opacity: 0.75; margin: 20px; color: white; position: relative; ">Hey there! 👋
 I’m glad you made it.
 
 This server is where I host and manage the APIs I’ve built for my games and SaaS systems. Check out my contact info and projects below.
 </p>
 
 
-<div class="contact-info">
+<div class="contact-info" style="opacity: 0.75;">
         <p><a href="tel:+17073423998">+17073423998</a></p>
         <p><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></p>
         <p><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></p>
