--- a/index.html
+++ b/index.html
@@ -449,10 +449,10 @@ strong {
     </nav> -->
 
   <div class="image">
-
+<img src="IMG_2151.png" alt="Description of the image">
     
   </div>
-
+<img src="IMG_2150.jpeg" alt="Description of the image">
 
 <!--   
   <div class="wave"></div>
@@ -479,7 +479,7 @@ This server is where I host and manage the APIs I’ve built for my games and Sa
 </p>
 
 
-<div class="contact-info" style="opacity: 0.75;">
+<div class="contact-info" style="opacity: 0.6;">
         <p><a href="tel:+17073423998">+17073423998</a></p>
         <p><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></p>
         <p><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></p>
