--- a/index.html
+++ b/index.html
@@ -458,10 +458,12 @@ strong {
 
 <div>
 
-  <img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2151.png" alt="Description of the image">
+  <!-- <img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2151.png" alt="Description of the image"> -->
     
   </div>
-<img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2150.jpeg" alt="Description of the image">
+
+<img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2150.jpeg" alt="Description of the image" style="width: 25%; mix-blend-mode: multiply;">
+
 
 <div class="btn" type="button">
   <strong>JOHN BERNAD</strong>
