--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@ strong {
     
   </div>
 
-<img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2150.jpeg" alt="Description of the image" style="width: 25%; mix-blend-mode: multiply;">
+<img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2150.jpeg" alt="Description of the image" style="width: 25%; mix-blend-mode: dodge;">
 
 
 <div class="btn" type="button">
