--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@ li{
 .btn {
   opacity: 0.75;
   margin: 0 auto;
-  margin-top: 40vh;
+  margin-top: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 13rem;
+  width: 40rem;
   overflow: hidden;
-  height: 3rem;
+  height: 20rem;
   background-size: 300% 300%;
   backdrop-filter: blur(1rem);
   border-radius: 5rem;
@@ -466,7 +466,7 @@ strong {
 
 
 <div class="btn" type="button">
-  <strong>JOHN BERNAD</strong>
+  <h3>JOHN BERNAD</h3>
 	
   <div id="container-stars">
     <div id="stars"></div>
