--- a/index.html
+++ b/index.html
@@ -462,10 +462,10 @@ strong {
     
   </div>
 
-<img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2157.png" alt="Description of the image" style="width: 25%; mix-blend-mode: dodge;">
+<img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2157.png" alt="Description of the image" style="width: 25%; ">
 
 
-<div class="btn" type="button">
+<div class="btn" type="button" style="mix-blend-mode: multiply;>
   <h3>JOHN BERNAD</h3>
 	
   <div id="container-stars">
