--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ strong {
 <img src="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/IMG_2157.png" alt="Description of the image" style="width: 25%; ">
 
 
-<div class="btn" type="button" style="mix-blend-mode: multiply;>
+<div class="btn" type="button" style="mix-blend-mode: darken;>
   <h3>JOHN BERNAD</h3>
 	
   <div id="container-stars">
