--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@ This server is where I host and manage the APIs I’ve built for my games and Sa
         <p><a href="mailto:johnbernad6@gmail.com">johnbernad6@gmail.com</a></p>
         <p><a href="https://www.linkedin.com/in/johnbernad/">linkedin.com/johnbernad/</a></p>
         <p><a href="https://github.com/johnbernad6">github.com/johnbernad6</a></p>
-        <p><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></p>
+<!--         <p><a href="https://raw.githubusercontent.com/johnbernad6/cardgameNodeJSserver/main/JohnBernadPDF.pdf" download>Download Resume</a></p> -->
         <p><a href="https://apps.apple.com/us/app/pinoy-poker/id6461049438" download>Try my free game on the app store</a></p>
         <p><a href="https://johnbernad6server-b837q.ondigitalocean.app/Menu">Check out this project I'm currently working on.</a></p>
 </div>
