--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="language" content="English" />
     <meta name="copyright" content="John Bernad © 2023 " />
     <meta name="robots" content="index, follow" />
-    <link rel="shortcut icon" href="favicon.ico" />
+    <!-- <link rel="shortcut icon" href="favicon.ico" /> -->
     
     <!-- Link to the sitemap -->
     <link rel="sitemap" type="application/xml" href="sitemap.php">
